--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Résumé</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Donald Trump &mdash; Résumé</title>
+    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <meta name="description" content="A résumé page of Donald John Trump">
+    <meta property="og:title" content="Donald Trump &mdash; Résumé">
+    <meta property="og:description" content="A résumé page of Donald John Trump">
+	<meta property="og:type" content="website">
   </head>
   <body>
     ― Hello World! &#x1F609;
