--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 	<meta property="og:type" content="website">
   </head>
   <body>
-    ― Hello World! &#x1F609;
+    <main>
+	  <article>
+	    <div class="page" style="border-color: midnightblue;">
+	      <!-- Content -->
+	    </div>
+	  </article>
+	</main>
   </body>
 </html>
